fixes alignment

--- a/app/assets/stylesheets/tests.sass
+++ b/app/assets/stylesheets/tests.sass
@@ -328,6 +328,7 @@ b.extra-medium-text
   input[type="file"] 
     font-size: 16px
     width: 360px
+    margin: 5px 0 10px 0
   .help-text
     font-size: 10px
     color: #8b8b8b
